// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageConfirmationNavItem should render design 1`] = `
<Fragment>
  <PageConfirmationNavItem__StyledPageItem
    data-test="question-confirmation-item"
  >
    <PageConfirmationNavItem__StyledNavLink
      data-test="question-confirmation-link"
      icon={[Function]}
      to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/444444444444444444444444444444444444/design"
    >
      Confirmation display name
    </PageConfirmationNavItem__StyledNavLink>
  </PageConfirmationNavItem__StyledPageItem>
</Fragment>
`;

exports[`PageConfirmationNavItem should render preview 1`] = `
<Fragment>
  <PageConfirmationNavItem__StyledPageItem
    data-test="question-confirmation-item"
  >
    <PageConfirmationNavItem__StyledNavLink
      data-test="question-confirmation-link"
      icon={[Function]}
      to="/questionnaire/111111111111111111111111111111111111/222222222222222222222222222222222222/333333333333333333333333333333333333/444444444444444444444444444444444444/preview"
    >
      Confirmation display name
    </PageConfirmationNavItem__StyledNavLink>
  </PageConfirmationNavItem__StyledPageItem>
</Fragment>
`;
